--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="info-content">
           <h1 class="name" title="Nolan Lwin">Nolan Lwin</h1>
 
-          <p class="title">Software Developer</p>
+          <p class="title">Software Engineer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -68,7 +68,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto: nl020@bucknell.edu" class="contact-link">nl020@bucknell.edu</a>
+              <a href="mailto: nolanlwin@astrio.app" class="contact-link">nolanlwin@astrio.app</a>
             </div>
 
           </li>
@@ -96,7 +96,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Lewisburg, Pennsylvania, United States</address>
+              <address>San Francisco, California, United States</address>
             </div>
 
           </li>
@@ -114,7 +114,7 @@
             </li>
 
             <li class="social-item">
-              <a href="https://www.github.com/i-am-nolan25" class="social-link" target="_blank">
+              <a href="https://www.github.com/nolanlwin" class="social-link" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
               </a>
             </li>
@@ -132,7 +132,7 @@
             </li> -->
 
             <li class="social-item">
-              <a href="https://twitter.com/NolanLwin" class="social-link" target="_blank">
+              <a href="https://x.com/nolanwwin" class="social-link" target="_blank">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
 
@@ -196,23 +196,6 @@
           <p>
             I am a passionate software engineer with a keen interest in artificial intelligence, tech consulting, and entrepreneurship. My journey in the world of technology has been driven by a desire to create innovative solutions that have a positive impact. With a strong foundation in software development and a love for emerging technologies, I am dedicated to pushing the boundaries of what is possible. Join me as we explore my projects and delve into the exciting realm of software engineering and its intersection with AI, tech consulting, and entrepreneurship. Let's embark on this journey together!
           </p>
-        </section>
-
-        <!-- YouTube Video Section -->
-        <section class="youtube-video">
-          <h3 class="h3 video-title">Watch My Story</h3>
-          <div class="video-container">
-            <iframe 
-              width="560" 
-              height="315" 
-              src="https://www.youtube.com/embed/YuIc4mq7zMU?si=adEjBWrGVuFH_kEc" 
-              title="YouTube video player" 
-              frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-              referrerpolicy="strict-origin-when-cross-origin" 
-              allowfullscreen>
-            </iframe>
-          </div>
         </section>
 
         <!-- service -->
@@ -331,7 +314,7 @@
           <p class="next-subtitle">Let's work together.</p>
 
           <p class="next-text">
-            I am currently seeking full-time Software Engineering opportunities. If you are interested in working with me, please feel free to reach out to me via <a class="email-link" href="mailto:nl020@bucknell.edu" target="_blank" style="display: inline">email</a> or <a class="linkedin-link" href="https://www.linkedin.com/in/nolan-lwin/" target="_blank">LinkedIn</a>. You can also drop me a message via the<a class="navbar-link" data-nav-link style="display:inline">Contact</a> page. I look forward to hearing from you!
+            I am currently seeking full-time Software Engineering opportunities. If you are interested in working with me, please feel free to reach out to me via <a class="email-link" href="mailto:nolanlwin@astrio.app" target="_blank" style="display: inline">email</a> or <a class="linkedin-link" href="https://www.linkedin.com/in/nolan-lwin/" target="_blank">LinkedIn</a>. You can also drop me a message via the<a class="navbar-link" data-nav-link style="display:inline">Contact</a> page. I look forward to hearing from you!
           </p>
 
         </section>
